--- a/js46/index.html
+++ b/js46/index.html
@@ -12,16 +12,25 @@
     <body>
         <div id="div1">
             <div>
-                <p>
-                    非同期通信していくよ〜
-                </p>
+                <h1>お天気API</h1>
             </div>
             <div>
-                <button id="js-btn"></button>
-            </div>
-            <div id="div2">
-                
+                <p>
+                    <button id="js-btn1">フェッチ</button>
+                </p>
             </div>
         </div>
+        <div id="div2">
+            <div>
+                <p>
+                    <button id="js-btn2">フェッチ</button>
+                </p>
+            </div>
+            <div id="div3">
+
+            </div>
+        </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
