--- a/js44/index.html
+++ b/js44/index.html
@@ -36,21 +36,64 @@
             <p id="question">
                 興味のある技術はなんですか？
             </p>
+            <input type="checkbox" class="cb" id="js-cb1" name="tech" value="TypeScript"> 
             <label for="tech1">
-                <input type="checkbox" id="js-cb" name="tech1" value="TypeScript"> TypeScript
+                TypeScript
             </label>
+            <input type="checkbox" class="cb" id="js-cb2" name="tech" value="Rest API">
             <label for="tech2">
-                <input type="checkbox" id="js-cb" name="tech2" value="Rest API"> Rest API
+                 Rest API
             </label>
+            <input type="checkbox" class="cb" id="js-cb3" name="tech" value="QraphQL">
             <label for="tech3">
-                <input type="checkbox" id="js-cb" name="tech3" value="TypeScript"> GraphQL
+                 GraphQL
             </label>
+            <input type="checkbox" class="cb" id="js-cb4" name="tech" value="Rust">
             <label for="tech4">
-                <input type="checkbox" id="js-cb" name="tech4" value="TypeScript"> Rust 
+                 Rust 
             </label>
+            <input type="checkbox" class="cb" id="js-cb5" name="tech" value="Go lang">
             <label for="tech5">
-                <input type="checkbox" id="js-cb" name="tech5" value="TypeScript"> Go lang
+                 Go lang
             </label>
+        </div>
+        <div>
+            <div>
+                <p id="question">
+                    あなたの資産の中でもっとも割合が高いのは？
+                </p>
+                <input type="radio" class="radio" id="js-rd1" name="asset" value="株式"> 
+                <label for="tech1">
+                    株式
+                </label>
+                <input type="radio" class="radio" id="js-rd2" name="asset" value="投資信託">
+                <label for="tech2">
+                    投資信託
+                </label>
+                <input type="radio" class="radio" id="js-rd3" name="asset" value="金">
+                <label for="tech3">
+                    金
+                </label>
+                <input type="radio" class="radio" id="js-rd4" name="asset" value="外貨預金">
+                <label for="tech4">
+                    外貨預金
+                </label>
+                <input type="radio" class="radio" id="js-rd5" name="asset" value="不動産">
+                <label for="tech5">
+                    不動産
+                </label>
+                <input type="radio" class="radio" id="js-rd6" name="asset" value="暗号資産">
+                <label for="tech5">
+                    暗号資産
+                </label>
+                <input type="radio" class="radio" id="js-rd7" name="asset" value="債権">
+                <label for="tech5">
+                    債権
+                </label>
+            </div>
+            <div id="js-msgbg">
+                <p class="msg" id="js-msg"></p>
+            </div>
         </div>
         <script src="script.js"></script>
     </body>
